--- a/ru.html
+++ b/ru.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vyacheslav Sapozhnikov - independent engineer-developer</title>
-    <meta name="description" content="Vyacheslav Sapozhnikov - independent engineer-developer">
+    <title>Вячеслав Сапожников - независимый инженер-разработчик</title>
+    <meta name="description" content="Вячеслав Сапожников - независимый инженер-разработчик">
     <meta name="keywords" content="">
     <!--[if IE]><script src="js/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
@@ -16,10 +16,10 @@
         <div class="container">
             <div class="navbar-header">
                 <div class="navbar-brand brand">
-					<span class="caption_white">Vyacheslav Sapozhnikov</span>
+					<span class="caption_white">Вячеслав Сапожников</span>
                 </div>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-                    <span class="sr-only">Menu</span>
+                    <span class="sr-only">Меню</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -84,6 +84,6 @@
 	</footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script src="js/js.js"></script>
+    <script src="js/js.js"></script>
 </body>
 </html>
