--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<span class="caption_white">Vyacheslav Sapozhnikov</span>
                 </div>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-                    <span class="sr-only">Menu</span>
+                    <span class="sr-only">Menu1</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
