--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--[if IE]><script src="js/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/s.css" media="screen">
+	<script src="js/js.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-static-top" id="start_header">
@@ -66,10 +67,7 @@
     <div class="even_bg" id="contacts">
         <div class="container">
             <div class="row">
-				<div id="icons" class="col-lg-6 col-md-6 col-sm-8 col-xs-10 col-sm-offset-0 col-md-offset-1 col-lg-offset-1 col-xs-offset-1">
-					<a title="Write e-mail" href="mailto:vvsapozhnikovv@yandex.ru"><img src="img/c/em.png" ></a>
-				</div>
-				<div id="links" class="col-lg-5 col-md-5 col-sm-4 col-xs-10 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 col-xs-offset-1">
+				<div id="links" class="col-lg-5 col-md-5 col-sm-10 col-xs-9 col-sm-offset-3 col-md-offset-6 col-lg-offset-6 col-xs-offset-1">
 					<a title="Write e-mail" href="mailto:vvsapozhnikovv@yandex.ru" id="mail-text">e-mail: vvsapozhnikovv@yandex.ru</a><input value="vvsapozhnikovv@yandex.ru" style="display:none" id="mail-input"/> <i id="copy-mail" class="icon-copy" title="Copy to clipboard"></i></div>
 				</div>
             </div>
@@ -84,6 +82,6 @@
 	</footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script src="js/js.js"></script>
+	<script src="js/js.en.js"></script>
 </body>
 </html>
