--- a/ru.html
+++ b/ru.html
@@ -10,6 +10,7 @@
     <!--[if IE]><script src="js/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/s.css" media="screen">
+	<script src="js/js.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-static-top" id="start_header">
@@ -30,7 +31,7 @@
                     <li><a href="#" class="scroll"></a></li>
                     <li><a href="#" class="scroll"></a></li>
                     <li><a href="#" class="scroll"></a></li>
-					<li><a href="#contacts" class="scroll">Contacts</a></li>
+					<li><a href="#contacts" class="scroll">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -66,11 +67,8 @@
     <div class="even_bg" id="contacts">
         <div class="container">
             <div class="row">
-				<div id="icons" class="col-lg-6 col-md-6 col-sm-8 col-xs-10 col-sm-offset-0 col-md-offset-1 col-lg-offset-1 col-xs-offset-1">
-					<a title="Write e-mail" href="mailto:vvsapozhnikovv@yandex.ru"><img src="img/c/em.png" ></a>
-				</div>
-				<div id="links" class="col-lg-5 col-md-5 col-sm-4 col-xs-10 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 col-xs-offset-1">
-					<a title="Write e-mail" href="mailto:vvsapozhnikovv@yandex.ru" id="mail-text">e-mail: vvsapozhnikovv@yandex.ru</a><input value="vvsapozhnikovv@yandex.ru" style="display:none" id="mail-input"/> <i id="copy-mail" class="icon-copy" title="Copy to clipboard"></i></div>
+				<div id="links" class="col-lg-5 col-md-5 col-sm-10 col-xs-9 col-sm-offset-3 col-md-offset-6 col-lg-offset-6 col-xs-offset-1">
+					<a title="Написать e-mail" href="mailto:vvsapozhnikovv@yandex.ru" id="mail-text">Эл. почта: vvsapozhnikovv@yandex.ru</a><input value="vvsapozhnikovv@yandex.ru" style="display:none" id="mail-input"/> <i id="copy-mail" class="icon-copy" title="Скопировать в буфер обмена"></i></div>
 				</div>
             </div>
         </div>
@@ -80,10 +78,10 @@
             <div class="row">
 			</div>
         </div>
-		<a class="btn btn-default btn-block" href="#start_header" role="button">to scroll up</a>
+		<a class="btn btn-default btn-block" href="#start_header" role="button">Вверх</a>
 	</footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/js.js"></script>
+	<script src="js/js.ru.js"></script>
 </body>
 </html>
