--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+				<span class="caption_white" id="cl_f"><a href="index_ru.html" class="change_lang">RU</a></span>
             </div>
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav">
@@ -33,6 +34,7 @@
                     <li><a href="#experience" class="scroll">Professional experience</a></li>
 					<li><a href="#contacts" class="scroll">Contacts</a></li>
                 </ul>
+				<span class="caption_white" id="cl_s"><a href="index_ru.html" class="change_lang">RU</a></span>
             </div>
         </div>
     </div>
