--- a/index_ru.html
+++ b/index_ru.html
@@ -24,6 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+				<span class="caption_white" id="cl_f"><a href="index.html" class="change_lang">EN</a></span>
             </div>
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav">
@@ -33,6 +34,7 @@
 						<li><a href="#experience" class="scroll">Профессиональный опыт</a></li>
 						<li><a href="#contacts" class="scroll">Контакты</a></li>
                 </ul>
+				<span class="caption_white" id="cl_s"><a href="index.html" class="change_lang">EN</a></span>
             </div>
         </div>
     </div>
