--- a/index_ru.html
+++ b/index_ru.html
@@ -139,7 +139,7 @@
 					<p>Занимался внедрением EAI (Enterprise Application Integration) и EDI (Enterprise Data Integration) решений,<br>
 					Разработкой и интеграцией приложений (Разработка систем SOA (Service-Oriented Architecture) и др.),<br>
 					Созданием проектно-технической документации для разработчиков.</p>
-					<p>8 лет опыта работы в российских ИТ-компаниях</p>
+					<p>8 лет опыта работы в Российских ИТ-компаниях</p>
 					<p>с 2019 года работаю в IT-компаниях США</p>
                 </div>
             </div>
