--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav">
 					<li><a href="#skills" class="scroll">Languages and Technologies</a></li>
                     <li><a href="#summary" class="scroll">Personal Information</a></li>
-					<li><a href="#OrganizationalLegalForm" class="scroll">Organizational-legal form</a></li>
+					<li><a href="#OrganizationalLegalForm" class="scroll">Business entity</a></li>
                     <li><a href="#experience" class="scroll">Professional experience</a></li>
 					<li><a href="#contacts" class="scroll">Contacts</a></li>
                 </ul>
@@ -45,9 +45,9 @@
                     <h1>C#, T-SQL</h1>
                 </div>
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-8 col-xs-offset-2 row_cell text">
-                    <h3>The Main specialization:</h3>
-					<p>Software Engineer; dotNET (Framework and Core), MS-SQL DB;</p>
-					<p>Development of System and Web Applications, Performance Analysis and Optimization,<br> Expertise of applications, Coaching</p>
+                    <h3>Main specialization:</h3>
+					<p>Software Engineering; dotNET (Framework and Core), MS-SQL DB;</p>
+					<p>System/Web Applications development, Performance Analysis and Optimization,<br> Expertise of applications, Coaching</p>
                 </div>
             </div>
         </div>
@@ -104,12 +104,13 @@
             <div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
                     <h2>Personal Information</h2>
-                    <p>Started working in software industry since 2006, combining work with study. Familiar with a number of development environments, frameworks and hardware platforms.<br>
+                    <p>Working in software industry since 2006, combining work with study.<br>
+					Familiar with numerous development environments, frameworks and hardware platforms.<br>
 					Experienced in high-level and low-level programming; software design and development.<br>
 					Main areas of expertise include: embedded systems programming, system programming and web development.<br>
 					Familiar with design and fabrication process of electronic components / boards / schematics / circuits from scratch.</p>
-					<p>Successfully acted as team leader on software development projects (up to 8 subordinates) - <b>I'm no longer interested in leadership positions</b>.</p>
-					<p>At the current moment I am working on US IT companies as offshore software engineer with Individual Entrepreneur status in Russian Federation.</p>
+					<p>Successfully acted as a teamleader in software development projects (up to 8 subordinates) - <b>I'm no longer interested in leading positions</b>.</p>
+					<p>At the moment I am working for US IT companies as an offshore software engineer with Individual Entrepreneur status in Russian Federation.</p>
                 </div>
             </div>
         </div>
@@ -118,7 +119,7 @@
         <div class="container">
             <div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-                    <h2>Organizational-legal form</h2>
+                    <h2>Business entity</h2>
 					<p><b>Individual Entrepreneur</b> in Russian Federation.</p>
                 </div>
             </div>
