--- a/index_ru.html
+++ b/index_ru.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-8 col-xs-offset-2 row_cell text">
                     <h3>Основная специализация:</h3>
 					<p>Инженер-программист / разработчик; dotNET (Framework и Core), MS-SQL DB;</p>
-					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br> Экспертиза кода приложений, Коучинг.</p>
+					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br>Экспертиза кода приложений, Коучинг.</p>
                 </div>
             </div>
         </div>
@@ -104,7 +104,8 @@
             <div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
                     <h2>Личные данные</h2>
-                    <p>В индустрии программного обеспечения начал работать с 2006 года, совмещая работу с учебой. Знаком с рядом сред разработки, фреймворков и аппаратных платформ. <br>
+                    <p>В индустрии программного обеспечения начал работать с 2006 года, совмещая работу с учебой.<br>
+					Знаком с рядом сред разработки, фреймворков и аппаратных платформ. <br>
 					Имею опыт программирования высокого и низкого уровня; проектирование и разработка программного обеспечения. <br>
 					Основные области специализации: программирование встроенных систем, системное программирование и веб-разработка. <br>
 					Знаком с проектированием и производством электронных компонентов / плат / дизайна схем / схем с нуля. </p>
