--- a/index_ru.html
+++ b/index_ru.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-8 col-xs-offset-2 row_cell text">
                     <h3>Основная специализация:</h3>
-					<p>Инженер-программист / разработчик; dotNET (Framework и Core), MS-SQL DB;</p>
+					<p>Разработка ПО; dotNET (Framework и Core), MS-SQL DB;</p>
 					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br>Экспертиза кода приложений, Коучинг.</p>
                 </div>
             </div>
