--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					Experienced in high-level and low-level programming; software design and development.<br>
 					Main areas of expertise include: embedded systems programming, system programming and web development.<br>
 					Familiar with design and fabrication process of electronic components / boards / schematics / circuits from scratch.</p>
-					<p>Successfully acted as a teamleader in software development projects (up to 8 subordinates) - <b>I'm no longer interested in leading positions</b>.</p>
+					<p>Successfully acted as a teamlead in software development projects (up to 8 subordinates) - <b>I'm no longer interested in leading positions</b>.</p>
 					<p>At the moment I am working for US IT companies as an offshore software engineer with Individual Entrepreneur status in Russian Federation.</p>
                 </div>
             </div>
