--- a/index_ru.html
+++ b/index_ru.html
@@ -63,9 +63,11 @@
 					<p>JavaScript, Knockout.JS, Ext.JS</p>
 					<p>TypeScript, Vue, Vuex, Vuetify</p>
 					<p>Sass, Less, Stylus</p>
-					<p>ASP.NET Razor</p>
 					<p>SignalR (JavaScript/TypeScript)</p>
-					<p>ASP.NET WebForms<br>ASP.NET WebApi<br>ASP.NET MVC</p>
+					<p>ASP.NET Razor</p>
+					<p>ASP.NET WebForms</p>
+					<p>ASP.NET WebApi</p>
+					<p>ASP.NET MVC</p>
                 </div>
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-5 col-md-5 col-sm-5 col-xs-10">
                     <h3>Back-end</h3>
@@ -80,6 +82,7 @@
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>БД</h3>
 					<p>SQL языки / SQL типы БД</p>
+					<p>Оптимизация запросов и модели БД</p>
 					<p>EntityFramework, Link2DB</p>
 					<p>Хранилище Redis</p>
                 </div>
