--- a/index_ru.html
+++ b/index_ru.html
@@ -113,7 +113,7 @@
 					Основные области специализации: программирование встроенных систем, системное программирование и веб-разработка. <br>
 					Знаком с проектированием и производством электронных компонентов / плат / дизайна схем / схем с нуля. </p>
 					<p>Успешно выполнял функции тимлида (до 8 подчиненных) - <b>больше не интересуют руководящие должности </b>. </p>
-					<p>В настоящее время работаю в ИТ-компаниях США в качестве оффшорного инженера-программиста со статусом индивидуального предпринимателя в Российской Федерации. </p>
+					<p>В настоящее время работаю в зарубежных ИТ-компаниях в качестве оффшорного инженера-программиста со статусом индивидуального предпринимателя в Российской Федерации. </p>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
 					Разработкой и интеграцией приложений (Разработка систем SOA (Service-Oriented Architecture) и др.),<br>
 					Созданием проектно-технической документации для разработчиков.</p>
 					<p>8 лет опыта работы в Российских ИТ-компаниях</p>
-					<p>с 2019 года работаю в IT-компаниях США</p>
+					<p>с 2019 года работаю с зарубежными заказчиками</p>
                 </div>
             </div>
         </div>
