--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					Main areas of expertise include: embedded systems programming, system programming and web development.<br>
 					Familiar with design and fabrication process of electronic components / boards / schematics / circuits from scratch.</p>
 					<p>Successfully acted as a teamlead in software development projects (up to 8 subordinates) - <b>I'm no longer interested in leading positions</b>.</p>
-					<p>At the moment I am working for US IT companies as an offshore software engineer with Individual Entrepreneur status in Russian Federation.</p>
+					<p>At the moment I am working for foreign IT companies as an offshore software engineer with Individual Entrepreneur status in Russian Federation.</p>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
 					Application development and integration (Development SOA (Service-Oriented Architecture) systems and others), <br>
 					Creation of technical design documentation for developers.</p>
 					<p>8 years of experience in Russia IT companies</p>
-					<p>since 2019 I have been working in US IT companies</p>
+					<p>since 2019 I have been working with foreign clients/customers</p>
                 </div>
             </div>
         </div>
