--- a/index_ru.html
+++ b/index_ru.html
@@ -113,7 +113,7 @@
 					Основные области специализации: программирование встроенных систем, системное программирование и веб-разработка. <br>
 					Знаком с проектированием и производством электронных компонентов / плат / дизайна схем / схем с нуля. </p>
 					<p>Успешно выполнял функции тимлида (до 8 подчиненных) - <b>больше не интересуют руководящие должности </b>. </p>
-					<p>В настоящее время работаю в зарубежных ИТ-компаниях в качестве оффшорного инженера-программиста со статусом индивидуального предпринимателя в Российской Федерации. </p>
+					<p>В текущий момент работаю в зарубежных ИТ-компаниях в качестве оффшорного инженера-программиста со статусом индивидуального предпринимателя в Российской Федерации. </p>
                 </div>
             </div>
         </div>
