--- a/index_ru.html
+++ b/index_ru.html
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row">
 				<div id="links" class="col-lg-5 col-md-5 col-sm-10 col-xs-12 col-sm-offset-3 col-md-offset-6 col-lg-offset-6 col-xs-offset-0">
-					<a title="Написать e-mail" href="mailto:vvsapozhnikovv@yandex.ru" id="mail-text">Эл. почта: vvsapozhnikovv@yandex.ru</a><input value="vvsapozhnikovv@yandex.ru" style="display:none" id="mail-input"/> <i id="copy-mail" class="icon-copy" title="Скопировать в буфер обмена"></i></div>
+					<a title="Написать e-mail" href="mailto:vvsapozhnikovv@yandex.ru" id="mail-text">Почта: vvsapozhnikovv@yandex.ru</a><input value="vvsapozhnikovv@yandex.ru" style="display:none" id="mail-input"/> <i id="copy-mail" class="icon-copy" title="Скопировать в буфер обмена"></i></div>
 				</div>
             </div>
         </div>
