--- a/index_ru.html
+++ b/index_ru.html
@@ -143,6 +143,7 @@
 					<p>Занимался внедрением EAI (Enterprise Application Integration) и EDI (Enterprise Data Integration) решений,<br>
 					Разработкой и интеграцией приложений (Разработка систем SOA (Service-Oriented Architecture) и др.),<br>
 					Созданием проектно-технической документации для разработчиков.</p>
+<p>Кроме разработки интеграционных систем, разрабатывал приложения для поиска оптимального решения задач с факториальной сложностью используя точные математические методы и генетические алгоритмы.</p>
 					<p>8 лет опыта работы в Российских ИТ-компаниях</p>
 					<p>с 2019 года работаю с зарубежными заказчиками</p>
                 </div>
