--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 					<p>I was engaged in the implementation of EAI (Enterprise Application Integration) and EDI (Enterprise Data Integration) solutions, <br>
 					Application development and integration (Development SOA (Service-Oriented Architecture) systems and others), <br>
 					Creation of technical design documentation for developers.</p>
+<p>In addition to the development and maintenance of Enterprise systems, I developed applications for finding the optimal solution to problems with factorial complexity using precise mathematical methods and genetic algorithms.</p>
 					<p>8 years of experience in Russia IT companies</p>
 					<p>since 2019 I have been working with foreign clients/customers</p>
                 </div>
