--- a/index_ru.html
+++ b/index_ru.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вячеслав Сапожников - независимый инженер-разработчик</title>
     <meta name="description" content="Вячеслав Сапожников - независимый инженер-разработчик">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="разработка, net, c#, t-sql, опыт, система, asp, sql, программирование, работа, javascript, typescript, обеспечение, оптимизация, память, приложение, программный, проектирование, российский, системный, специализация, язык, avr, bash, core, enterprise, framework, git, integration, powershell, signalr, svn, tfvs, глубокий, зарубежный, индивидуальный, исследование, ит-компания, микроконтроллер, облачный, предприниматель, принцип, проблема, производительность, профилирование, решение, схема, application">
     <!--[if IE]><script src="js/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/s.css" media="screen">
