--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vyacheslav Sapozhnikov - Independent Software Engineer</title>
     <meta name="description" content="Vyacheslav Sapozhnikov - Independent Software Engineer">
-    <meta name="keywords" content="development, system, net, software, experience, application, asp, for, design, program, sql, embed, enterprise, familiar, framework, integration, javascript, language, memory, typescript, web, working, avr, bash, cloud, company, core, deep, entrepreneur, expertise, federation, fix, foreign, git, including, individual, investigate, microcontroller, optimization, performance, powershell, principle, profile, russian, signalr, solution, specialization, svn, tfvs, wide, work">
+    <meta name="keywords" content="development, c#, t-sql, system, net, software, experience, application, asp, for, design, program, sql, embed, enterprise, familiar, framework, integration, javascript, language, memory, typescript, web, working, avr, bash, cloud, company, core, deep, entrepreneur, expertise, federation, fix, foreign, git, including, individual, investigate, microcontroller, optimization, performance, powershell, principle, profile, russian, signalr, solution, specialization, svn, tfvs, wide, work">
     <!--[if IE]><script src="js/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/s.css" media="screen">
