--- a/index_ru.html
+++ b/index_ru.html
@@ -163,7 +163,7 @@
             <div class="row">
 			</div>
         </div>
-		<a class="btn btn-default btn-block" href="#start_header" role="button">Вверх</a>
+		<a class="btn btn-default btn-block scroll" href="#start_header" role="button">Вверх</a>
 	</footer>
 	<script src="js/js.js"></script>
     <script src="js/jquery-1.11.3.min.js"></script>
