--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="row">
 			</div>
         </div>
-		<a class="btn btn-default btn-block" href="#start_header" role="button">scroll up</a>
+		<a class="btn btn-default btn-block scroll" href="#start_header" role="button">scroll up</a>
 	</footer>
 	<script src="js/js.js"></script>
     <script src="js/jquery-1.11.3.min.js"></script>
