--- a/index_ru.html
+++ b/index_ru.html
@@ -74,7 +74,7 @@
 					<p>C# (Framework and Core), VB.NET</p>
 					<p>C, C++<br>(включая разработку под микроконтроллеры AVR)</p> 
 					<p>WinAPI</p>
-					<p>ASP.NET WinForms</p>
+					<p>ASP.NET WinForms, ClickOnce</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
