--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 					<p>C# (Framework and Core), VB.NET</p>
 					<p>C, C++<br>(including development of embedded software for AVR Microcontrollers)</p> 
 					<p>WinAPI</p>
-					<p>ASP.NET WinForms, ClickOnce</p>
+					<p>ASP.NET WinForms</p>
+					<p>ClickOnce, WIX installer</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
