--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<p>C, C++<br>(including development of embedded software for AVR Microcontrollers)</p> 
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
-					<p>ClickOnce, WiX toolset</p>
+					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
