--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@
             </div>
         </div>
     </div>
+	<div class="even_bg">
+        <div class="container">
+            <div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                    <h2>***</h2>
+                    <p>I'm convinced that classifying developers by skill level (grade) is meaningless.</p>
+					<br>
+					<p>I believe that the main skill for a developer is finding a more effective way for problem solving.<br>
+					   First of all, dev must be able to correctly search for information and be able to apply it to solve a problem, <span class="also">without memorizing all possible technologies and algorithms in advance.</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="even_bg" id="contacts">
         <div class="container">
             <div class="row">
