--- a/index_ru.html
+++ b/index_ru.html
@@ -151,6 +151,19 @@
             </div>
         </div>
     </div>
+	<div class="even_bg">
+        <div class="container">
+            <div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                    <h2>***</h2>
+                    <p>Убеждён что классификация разработчиков по уровню квалификации бессмысленна.</p>
+					<br>
+					<p>Я считаю, что основной навык для разработчика это поиск решения проблемы.<br>
+					   Надо в первую очередь уметь правильно искать информацию и уметь её применить для решения проблемы, а не запоминать всё подряд.<br><span class="also">(не запоминать все возможные алгоритмы и технологии заранее)</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="even_bg" id="contacts">
         <div class="container">
             <div class="row">
