--- a/index_ru.html
+++ b/index_ru.html
@@ -80,7 +80,7 @@
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
                                         <p>IKVM.NET</p>
-					<p>Apache FOP</p>
+					<p>Apache FOP, iTextSharp</p>
                 </div>
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>БД</h3>
