--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 </div>
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>DB</h3>
-					<p>SQL languages / SQL DB types</p>
+					<p>SQL languages / SQL DB types</p> 
+                                        <p>T4 templates, DBML</p>
 					<p>Optimizing queries and database models</p>
 					<p>EntityFramework, Link2DB</p>
 					<p>Redis</p>
