--- a/index_ru.html
+++ b/index_ru.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-9 col-xs-offset-1 row_cell text">
                     <h3>Основная специализация:</h3>
 					<p>Разработка ПО; dotNET (Framework и Core), MS-SQL DB;</p>
-					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br>Экспертиза кода приложений, Коучинг.</p>
+					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br>Экспертиза кода приложений, Коучинг</p>
                 </div>
             </div>
         </div>
