--- a/index_ru.html
+++ b/index_ru.html
@@ -75,6 +75,7 @@
 					<p>C, C++<br>(включая разработку под микроконтроллеры AVR)</p> 
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
+                                        <p>OData, EDM</p>
 					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
