--- a/index_ru.html
+++ b/index_ru.html
@@ -76,7 +76,7 @@
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
                                         <p>WCF, OData, EDM</p>
-					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects</p>
+					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects<br>IExpress</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
