--- a/index_ru.html
+++ b/index_ru.html
@@ -73,6 +73,7 @@
                     <h3>Back-end</h3>
 					<p>C# (Framework and Core), VB.NET</p>
 					<p>C, C++<br>(включая разработку под микроконтроллеры AVR)</p> 
+                                        <p>TCP/UDP</p>
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
                                         <p>WCF, OData, EDM</p>
