--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-5 col-md-5 col-sm-5 col-xs-10">
                     <h3>Back-end</h3>
 					<p>C# (Framework and Core), VB.NET</p>
-					<p>C, C++<br>(including development of embedded software for AVR Microcontrollers)</p> 
+					<p>C, C++<br>(including development of embedded software for AVR Microcontrollers)</p>
+                                        <p>TPL, Rx, Actor systems</p>
                                         <p>TCP/UDP</p>
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
