--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <h3>Back-end</h3>
 					<p>C# (Framework and Core), VB.NET</p>
 					<p>C, C++<br>(including development of embedded software for AVR Microcontrollers)</p>
+                                        <p>Perl</p>
                                         <p>TPL, Rx, Akka.NET (Actor system)</p>
                                         <p>TCP/UDP</p>
 					<p>WinAPI</p>
