--- a/index_ru.html
+++ b/index_ru.html
@@ -107,6 +107,13 @@
                     <h3>Брокеры сообщений</h3>
 					<p>RabbitMQ</p>
                 </div>
+				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
+                    <h3>Средства</h3>
+					<p>Docker</p>
+					<p>JetBrains dotMemory, dotTrace профайлеры</p>
+					<p>SonarQube</p>
+					<p>Fiddler</p>
+                </div>
             </div>
         </div>
     </div>
