--- a/index_ru.html
+++ b/index_ru.html
@@ -112,6 +112,7 @@
 					<p>Docker</p>
 					<p>JetBrains dotMemory, dotTrace профайлеры</p>
 					<p>SonarQube</p>
+                                        <p>Camunda</p>
 					<p>Fiddler</p>
                 </div>
             </div>
