--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<p>SQL languages / SQL DB types</p> 
                                         <p>T4 templates, DBML</p>
 					<p>Optimizing queries and database models</p>
-					<p>EntityFramework, Linq2DB, Linq2Sql</p>
+					<p>Dapper, EntityFramework, Linq2DB, Linq2Sql</p>
 					<p>Redis</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
