--- a/index_ru.html
+++ b/index_ru.html
@@ -91,7 +91,7 @@
 					<p>SQL языки / SQL типы БД</p>
                                         <p>T4 шаблоны, DBML</p>
 					<p>Оптимизация запросов и модели БД</p>
-					<p>EntityFramework, Linq2DB, Linq2Sql</p>
+					<p>Dapper, EntityFramework, Linq2DB, Linq2Sql</p>
 					<p>Хранилище Redis</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
