--- a/index_ru.html
+++ b/index_ru.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-9 col-xs-offset-1 row_cell text">
                     <h3>Основная специализация:</h3>
 					<p>Разработка ПО; dotNET (Framework и Core), MS-SQL DB;</p>
-					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности, <br>Экспертиза кода приложений, Коучинг</p>
+					<p>Разработка системных и веб-приложений, Анализ и Оптимизация производительности и памяти, <br>Экспертиза кода приложений, Коучинг</p>
                 </div>
             </div>
         </div>
@@ -78,8 +78,8 @@
                                         <p>TCP/UDP</p>
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
-                                        <p>WCF, OData, EDM</p>
-					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects,<br>IExpress</p>
+                                        <p>WCF, OData, EDM, gRpc</p>
+					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects,<br>IExpress, IIS</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
@@ -100,7 +100,7 @@
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>Облачные системы</h3>
-					<p>AWS, AWS S3, AWS Lambda</p>
+					<p>AWS, AWS S3, AWS Lambda, AWS Secrets, AWS RDB</p>
 					<p>Cloudian HyperStore</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
@@ -110,7 +110,7 @@
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
                     <h3>Средства</h3>
 					<p>Docker</p>
-					<p>JetBrains dotMemory, dotTrace профайлеры</p>
+					<p>JetBrains dotMemory, dotTrace, DynaTrace, PerfView профайлеры</p>
 					<p>SonarQube</p>
                                         <p>Camunda</p>
 					<p>Fiddler</p>
@@ -130,6 +130,7 @@
 					Знаком с проектированием и производством электронных компонентов / плат / дизайна схем / схем с нуля. </p>
 					<p>Успешно выполнял функции тимлида (до 8 подчиненных) - <b>больше не интересуют руководящие должности </b>. </p>
 					<p>В текущий момент работаю в зарубежных ИТ-компаниях в качестве оффшорного инженера-программиста со статусом индивидуального предпринимателя в Российской Федерации. </p>
+					<p>Специалист по поиску и устранению утечек памяти и перформанс тюнингу.</p>
                 </div>
             </div>
         </div>
