--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="col-lg-8 col-lg-offset-0 col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 col-xs-10 col-xs-offset-1 row_cell text">
                     <h3>Main specialization:</h3>
 					<p>Software Engineering; dotNET (Framework and Core), MS-SQL DB;</p>
-					<p>System/Web Applications development, Performance Analysis and Optimization,<br> Expertise of applications, Coaching</p>
+					<p>System/Web Applications development, Performance and Memory Analysis and Optimization,<br> Expertise of applications, Coaching</p>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                                         <p>TCP/UDP</p>
 					<p>WinAPI</p>
 					<p>ASP.NET WinForms</p>
-                                        <p>WCF, OData, EDM</p>
+                                        <p>WCF, OData, EDM, gRpc</p>
 					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects,<br>IExpress</p>
 					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
@@ -100,7 +100,7 @@
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>Cloud Systems</h3>
-					<p>AWS, AWS S3, AWS Lambda</p>
+					<p>AWS, AWS S3, AWS Lambda, AWS Secrets, AWS RDB</p>
 					<p>Cloudian HyperStore</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
@@ -110,7 +110,7 @@
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
                     <h3>Tools</h3>
 					<p>Docker</p>
-					<p>JetBrains dotMemory, dotTrace</p>
+					<p>JetBrains dotMemory, dotTrace, DynaTrace, PerfView</p>
 					<p>SonarQube</p>
                                         <p>Camunda</p>
 					<p>Fiddler</p>
