--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 					<p>Cloudian HyperStore</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
-                    <h3>Message brokers</h3>
-					<p>RabbitMQ</p>
+                    <h3>Message brokers/Queues </h3>
+					<p>RabbitMQ, AWS SQS</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
                     <h3>Tools</h3>
