--- a/index_ru.html
+++ b/index_ru.html
@@ -60,11 +60,11 @@
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-3 col-md-3 col-sm-3 col-xs-10">
                     <h3>Front-end</h3>
-					<p>JavaScript, JSX, Knockout.JS, Ext.JS</p>
-					<p>TypeScript, Vue, Vuex, Vuetify, React</p>
+					<p>JavaScript / TypeScript</p>
+					<p>JSX, Knockout.JS, Ext.JS, Vue, Vuex, Vuetify, React, Svelte</p>
 					<p>Sass, Less, Stylus</p>
 					<p>SignalR (JavaScript/TypeScript)</p>
-					<p>ASP.NET Razor</p>
+					<p>ASP.NET (R\Bl)azor</p>
 					<p>ASP.NET WebForms</p>
 					<p>ASP.NET WebApi</p>
 					<p>ASP.NET MVC</p>
@@ -74,25 +74,25 @@
 					<p>C# (Framework and Core), VB.NET</p>
 					<p>C, C++<br>(включая разработку под микроконтроллеры AVR)</p> 
                                         <p>Perl</p>
-                                        <p>TPL, Rx, Akka.NET (Actor system)</p>
+                                        <p>TPL, Akka.NET (Actor system)</p>
                                         <p>TCP/UDP</p>
 					<p>WinAPI</p>
-					<p>ASP.NET WinForms</p>
+					<p>ASP.NET*</p>
                                         <p>WCF, OData, EDM, gRpc</p>
 					<p>ClickOnce, WiX toolset,<br>Microsoft Visual Studio Installer Projects,<br>IExpress, IIS</p>
-					<p>JavaScript/TypeScript</p>
 					<p>Bash, PowerShell</p>
 					<p>SignalR, MQTT</p>
                                         <p>IKVM.NET</p>
 					<p>Apache FOP, iTextSharp</p>
+					<p>Serilog</p>
                 </div>
                 <div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>БД</h3>
-					<p>SQL языки / SQL типы БД</p>
+					<p>SQL языки / SQL типы БД: MS SQL, MySQL, PXC, Postgress</p>
                                         <p>T4 шаблоны, DBML</p>
 					<p>Оптимизация запросов и модели БД</p>
 					<p>Dapper, EntityFramework, Linq2DB, Linq2Sql</p>
-					<p>Хранилище Redis</p>
+					<p>Redis, KeyDB, MongoDB</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10">
                     <h3>Системы Контроля Версий</h3>
@@ -105,16 +105,17 @@
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
                     <h3>Брокеры сообщений/Очереди</h3>
-					<p>RabbitMQ, AWS SQS</p>
+					<p>RabbitMQ, AWS SQS, Kafka</p>
                 </div>
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-4  col-md-4 col-sm-4 col-xs-10 right">
                     <h3>Средства</h3>
-					<p>Docker</p>
+					<p>Docker, .NET Aspire</p>
 					<p>JetBrains dotMemory, dotTrace, DynaTrace, PerfView профайлеры</p>
 					<p>SonarQube</p>
                                         <p>Camunda</p>
 					<p>Fiddler</p>
 					<p>Jenkins, Octopus</p>
+					<p>Prometheus, Grafana*</p>
                 </div>
             </div>
         </div>
@@ -195,9 +196,9 @@
         </div>
 		<a class="btn btn-default btn-block scroll" href="#start_header" role="button">Вверх</a>
 	</footer>
-	<script src="js/js.js"></script>
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-	<script src="js/js.ru.js"></script>
+<script src="js/js.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/js.ru.js"></script>
 </body>
 </html>
