--- a/index_ru.html
+++ b/index_ru.html
@@ -61,7 +61,7 @@
 				<div class="col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-lg-3 col-md-3 col-sm-3 col-xs-10">
                     <h3>Front-end</h3>
 					<p>JavaScript / TypeScript</p>
-					<p>JSX, Knockout.JS, Ext.JS, Vue, Vuex, Vuetify, React, Svelte</p>
+					<p>JSX, Knockout.JS, Ext.JS, Vue, Vuex, Vuetify, Quasar, React, Svelte</p>
 					<p>Sass, Less, Stylus</p>
 					<p>SignalR (JavaScript/TypeScript)</p>
 					<p>ASP.NET (R\Bl)azor</p>
